--- a/Marindeck/View/Debuger/DebugerViewController.xib
+++ b/Marindeck/View/Debuger/DebugerViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DebugerViewController" customModule="Marindecker" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DebugerViewController" customModule="Marindeck" customModuleProvider="target">
             <connections>
                 <outlet property="editorView" destination="UMZ-h4-qyq" id="4Lo-91-Kfw"/>
                 <outlet property="segmentCtrl" destination="Jss-NN-Idu" id="wNq-L0-SW7"/>
@@ -47,7 +47,7 @@
                         </navigationItem>
                     </items>
                 </navigationBar>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UMZ-h4-qyq" customClass="HighlightView" customModule="HighlightJS">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UMZ-h4-qyq" customClass="HighlightView">
                     <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
