--- a/Marindeck/View/Base.lproj/Main.storyboard
+++ b/Marindeck/View/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gy9-se-7fd">
-                                <rect key="frame" x="0.0" y="846" width="414" height="50"/>
+                                <rect key="frame" x="0.0" y="895" width="414" height="1"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="etF-fL-FzX"/>
+                                    <constraint firstAttribute="height" constant="1" id="cyX-Ai-3cZ"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="95p-Pr-vfx">
-                                <rect key="frame" x="0.0" y="20" width="414" height="842"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="876"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AjS-Cn-qwX">
@@ -58,11 +58,11 @@
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9v-pz-eSb">
-                                <rect key="frame" x="346" y="748" width="48" height="48"/>
+                                <rect key="frame" x="338" y="748" width="56" height="56"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="ghB-vR-bvv"/>
-                                    <constraint firstAttribute="height" constant="48" id="yYD-2c-rRF"/>
+                                    <constraint firstAttribute="width" constant="56" id="ghB-vR-bvv"/>
+                                    <constraint firstAttribute="height" constant="56" id="yYD-2c-rRF"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -76,19 +76,19 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="95p-Pr-vfx" firstAttribute="leading" secondItem="I8j-5m-JKv" secondAttribute="trailing" id="1AO-VL-VpB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cIw-Of-AaE" secondAttribute="bottom" constant="140" id="1Bh-2h-oJn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gy9-se-7fd" secondAttribute="trailing" id="1oG-DI-4gE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AjS-Cn-qwX" secondAttribute="trailing" id="6Vk-Kf-1qd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="95p-Pr-vfx" secondAttribute="trailing" id="BGm-gO-oCe"/>
-                            <constraint firstItem="95p-Pr-vfx" firstAttribute="top" secondItem="AjS-Cn-qwX" secondAttribute="bottom" id="CwR-Es-1C3"/>
+                            <constraint firstAttribute="bottom" secondItem="95p-Pr-vfx" secondAttribute="bottom" id="9bU-t3-aZE"/>
+                            <constraint firstItem="95p-Pr-vfx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Bci-2I-RUX"/>
                             <constraint firstItem="gy9-se-7fd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="K5R-eR-F8F"/>
                             <constraint firstItem="V9v-pz-eSb" firstAttribute="top" secondItem="cIw-Of-AaE" secondAttribute="bottom" constant="26" id="Qht-93-4RN"/>
                             <constraint firstItem="I8j-5m-JKv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Sfd-0i-SwN"/>
-                            <constraint firstItem="95p-Pr-vfx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ZLd-88-FV9"/>
                             <constraint firstItem="AjS-Cn-qwX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d09-0m-ogF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V9v-pz-eSb" secondAttribute="trailing" constant="20" id="eZA-4a-ruf"/>
-                            <constraint firstItem="95p-Pr-vfx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="exl-28-UTO"/>
                             <constraint firstItem="I8j-5m-JKv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="-280" id="fTj-H2-iip"/>
+                            <constraint firstItem="95p-Pr-vfx" firstAttribute="top" secondItem="AjS-Cn-qwX" secondAttribute="bottom" id="lJ6-Bg-IjF"/>
                             <constraint firstAttribute="bottom" secondItem="I8j-5m-JKv" secondAttribute="bottom" id="p7n-Hl-FDI"/>
                             <constraint firstItem="AjS-Cn-qwX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="pTK-sD-kSY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cIw-Of-AaE" secondAttribute="trailing" constant="20" id="qEI-f1-3P3"/>
@@ -100,6 +100,7 @@
                     </view>
                     <connections>
                         <outlet property="bottomBackView" destination="gy9-se-7fd" id="EW1-H5-8LS"/>
+                        <outlet property="bottomBackViewConstraint" destination="cyX-Ai-3cZ" id="BB3-hT-dY7"/>
                         <outlet property="debugFloatingBtn" destination="cIw-Of-AaE" id="jQ7-4g-wXp"/>
                         <outlet property="mainDeckView" destination="95p-Pr-vfx" id="kCx-tU-0nc"/>
                         <outlet property="menuView" destination="I8j-5m-JKv" id="Stl-4X-r8c"/>
@@ -115,7 +116,7 @@
                     </connections>
                 </screenEdgePanGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-204.34782608695653" y="75"/>
+            <point key="canvasLocation" x="-205.79710144927537" y="74.330357142857139"/>
         </scene>
         <!--Settings Table View Controller-->
         <scene sceneID="Sf4-DY-BkN">
@@ -533,7 +534,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZM-71-1jo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1255" y="74"/>
+            <point key="canvasLocation" x="-1255.072463768116" y="73.660714285714278"/>
         </scene>
     </scenes>
     <resources>
